<resources>
    <string name="app_name">Bull\'sCars</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="login">Login</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="birth_date">Birth Date</string>
    <string name="country">Country</string>
    <string name="apply">Apply</string>
    <string name="lets_count_together">Lets Count Together</string>
    <string name="_1">+1</string>
    <string name="first_number">First Number</string>
    <string name="second_number">Second Number</string>
    <string name="add">Add</string>
    <string name="dummy_text">DUMMY TEXT</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="show_image">Show Image</string>
    <string name="dsc_logo">DSC LOGO</string>
    <string name="welcome_to_our_resturant">Welcome to our resturant</string>
    <string name="beef">Beef</string>
    <string name="chicken">Chicken</string>
    <string name="shrimp">Shrimp</string>
    <string name="cheese">Cheese</string>
    <string name="onions">Onions</string>
    <string name="salad">Salad</string>
    <string name="order">Order</string>
    <string name="this_is_a_notification">This is a notification</string>
    <string name="welcome_to_our_gdsc_community">GDG COMMUNITY</string>
    <string name="events">Events</string>
    <string name="core_team">Core Team</string>
    <string name="members">Members</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="log_out">Log out</string>
    <string name="enter_your_todo">Enter your todo</string>
    <string name="nation_wide_car_rental_app">Nation wide car rental app</string>
    <string name="hello_there">Hello There,</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="sign_in_to_continuo">Sign in to continuo</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="go">GO</string>
    <string name="new_user_sign_up">NEW USER? SIGN UP</string>
    <string name="sign_up_to_continuo">Sign up to continuo</string>
    <string name="fullname">FullName</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_signed_up_login">ALREADY SIGNED UP? LOGIN</string>
    <string name="base_activity">BASE ACTIVITY</string>
    <string name="ieslammedhat_gmail_com">ieslammedhat@gmail.com</string>
    <string name="eslam_medhat">Eslam Medhat</string>
    <string name="my_profile">My Profile</string>
    <string name="my_groups">My Groups</string>
    <string name="send">Send</string>
    <string name="archived">Archived</string>
    <string name="spam">Spam</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="bull_s_cars">BULL\'S CARS</string>
    <string name="remember_me">Remember Me</string>
    <string name="home">Home</string>
    <string name="apps">Apps</string>
    <string name="profile">Profile</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="apps_fragment">APPS FRAGMENT</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="settings_fragment">Settings Fragment</string>
    <string name="todo">Todo</string>
    <string name="restaurant">Restaurant</string>
    <string name="calculator">Calculator</string>
    <string name="counter_app">Counter App</string>
    <string name="imageViewExample_app">ImageViewExample App</string>
    <string name="bulls_cars">Bulls Cars</string>
    <string name="show_notification">Show Notification</string>
    <string name="get_started">Get Started</string>
    <string name="next_button">Next Button</string>
    <string name="skip">Skip</string>
    <string name="item_image">Item Image</string>
    <string name="title">Title</string>
    <string name="lorpem_ipsum_sajkdfih_fnfnamsmpqc_mswmql_ma">Lorpem ipsum sajkdfih fnfnamsmpqc mswmql ma</string>
    <string name="add_new_shopping_item">Add New Shopping Item</string>
    <string name="enter_name">Enter name</string>
    <string name="amount">Amount</string>
    <string name="cancel">Cancel</string>
    <string name="continuo_with_google">Continuo with Google</string>
    <string name="web_client_id">29980967229-kicsmqbf3jtdu72nb0ndght8fl99ah82.apps.googleusercontent.com</string>
    <string name="retrieve_data">Retrieve Data</string>
    <string name="new_first_name">New First Name</string>
    <string name="new_last_name">New Last Name</string>
    <string name="age">Age</string>
    <string name="new_age">New Age</string>
    <string name="save">Save</string>
    <string name="retrieve">Retrieve</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="upload_image">Upload Image</string>
    <string name="delete_image">Delete Image</string>
    <string name="download_image">Download Image</string>
    <string name="notification_title">Notification title</string>
    <string name="notification_message">Notification Message</string>
    <string name="token">Token</string>
    <string name="send_notification">Send Notification</string>
    <string name="characterimage">CharacterImage</string>
    <string name="todolist_calculator">Todolist + Calculator</string>
    <string name="bulls_cars_counter">Bulls Cars + Counter</string>
    <string name="breaking_bad_characters">Breaking Bad Characters</string>
    <string name="pushnotification_app">PushNotification App</string>
    <string name="clothes_app">Clothes App</string>
    <string name="shopping_list_item">Shopping List Item</string>
    <string name="todolist_api_app">Todolist Api App</string>
    <string name="normal_map">Normal Map</string>
    <string name="hybrid_map">Hybrid Map</string>
    <string name="satellite_map">Satellite Map</string>
    <string name="terrain_map">Terrain Map</string>
    <string name="lat_long_snippet">Lat: %1$.5f, Long: %2$.5f</string>
    <string name="dropped_pin">Dropped Pin</string>
    <string name="poi">poi</string>
    <string-array name="months">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>


</resources>