<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/miProfile"
        android:icon="@drawable/icon_member"
        android:title="@string/my_profile" />
    <item
        android:id="@+id/miGroup"
        android:icon="@drawable/icon_core_team"
        android:title="@string/my_groups" />
    <item
        android:id="@+id/miSettingsNumber2"
        android:icon="@drawable/outline_settings_black_36"
        android:title="@string/settings" />
    <item
        android:id="@+id/miLanguageNew"
        android:icon="@drawable/icon_language"
        android:title="@string/language" />

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/miSend"
            android:icon="@drawable/icon_send"
            android:title="@string/send" />
        <item
            android:id="@+id/miArchive"
            android:icon="@drawable/icon_archive"
            android:title="@string/archived" />
        <item
            android:id="@+id/miSpam"
            android:icon="@drawable/icon_spam"
            android:title="@string/spam" />
        <item
            android:id="@+id/miLogOut2"
            android:icon="@drawable/icon_logout"
            android:title="@string/log_out" />
    </group>
</menu>