<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/ivOnBoardingItemImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_200sdp"
        android:contentDescription="@string/item_image" />

    <TextView
        android:id="@+id/tvOnBoardingItemTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/title"
        android:textColor="@color/red_500"
        android:textSize="@dimen/_25sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvOnBoardingItemDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:text="@string/lorpem_ipsum_sajkdfih_fnfnamsmpqc_mswmql_ma" />

</LinearLayout>