<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="@dimen/_200sdp"
    android:padding="@dimen/_10sdp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/etAddShoppingItemTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/_5sdp"
        android:text="@string/add_new_shopping_item"
        android:textSize="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etAddShoppingItemName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:ems="10"
        android:layout_marginTop="@dimen/_10sdp"
        android:hint="@string/enter_name"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/etAddShoppingItemAmount"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddShoppingItemTitle" />

    <EditText
        android:id="@+id/etAddShoppingItemAmount"
        android:layout_width="@dimen/_50sdp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/amount"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddShoppingItemTitle" />

    <TextView
        android:id="@+id/tvAddShoppingItemCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/tvAddShoppingItemAdd"
        app:layout_constraintTop_toBottomOf="@+id/etAddShoppingItemAmount" />

    <TextView
        android:id="@+id/tvAddShoppingItemAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etAddShoppingItemAmount" />
</androidx.constraintlayout.widget.ConstraintLayout>